--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "memjs": "^0.8.7",
     "morgan": "~1.6.1",
+    "mysql": "^2.9.0",
+    "node-ses": "^1.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
