--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.9.0",
     "nodalytics": "^1.1.0",
     "node-ses": "^1.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.3.7"
   }
 }
