--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "memjs": "^0.8.7",
     "morgan": "~1.6.1",
     "mysql": "^2.9.0",
+    "nodalytics": "^1.1.0",
     "node-ses": "^1.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.3.7"
   }
 }
