--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "memcached": "^2.2.1",
+    "mongodb": "^2.1.2",
+    "mongoose": "^4.3.4",
+    "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "mysql": "^2.9.0",
     "nodalytics": "^1.1.0",
