--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "apac": "^1.0.0",
+    "aws-lib": "^0.3.0",
     "body-parser": "~1.13.2",
     "connect-memcached": "^0.1.0",
     "cookie-parser": "~1.3.5",
