--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodalytics": "^1.1.0",
     "node-ses": "^1.1.0",
     "serve-favicon": "~2.3.0",
+    "shortid": "^2.2.4",
     "socket.io": "^1.3.7"
   }
 }
